versions/0.27.0/_sources/refs/_aws-cdk_aws-autoscalingplans.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"wXj8VLNj0P74jsHukNRNn65mKp28+RyPWvOxm5rFFIs="}

@aws-cdk/aws-autoscalingplans
=============================

.. mdinclude:: ./__aws-cdk_aws-autoscalingplans.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.AutoScalingPlans/0.27.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.AutoScalingPlans" Version="0.27.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.AutoScalingPlans --version 0.27.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.AutoScalingPlans" version="0.27.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/autoscalingplans/0.27.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:autoscalingplans:jar:0.27.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="autoscalingplans" rev="0.27.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>autoscalingplans</artifactId>
           <version>0.27.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:autoscalingplans:0.27.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='autoscalingplans', version='0.27.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscalingplans/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscalingplans@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscalingplans": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscalingplans@0.27.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscalingplans/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscalingplans@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscalingplans": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscalingplans@0.27.0



.. py:module:: @aws-cdk/aws-autoscalingplans

CfnScalingPlan
^^^^^^^^^^^^^^

.. py:class:: CfnScalingPlan(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan;

      .. code-tab:: javascript

         const { CfnScalingPlan } = require('@aws-cdk/aws-autoscalingplans');

      .. code-tab:: typescript

         import { CfnScalingPlan } from '@aws-cdk/aws-autoscalingplans';



   A CloudFormation `AWS::AutoScalingPlans::ScalingPlan`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlanProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlanProps`\  *(readonly)*


   .. py:attribute:: scalingPlanArn

      :type: string *(readonly)*


   .. py:attribute:: scalingPlanName

      :type: string *(readonly)*


   .. py:attribute:: scalingPlanVersion

      :type: string *(readonly)*

   .. py:class:: ApplicationSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.ApplicationSourceProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.ApplicationSourceProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.ApplicationSourceProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: cloudFormationStackArn

         `CfnScalingPlan.ApplicationSourceProperty.CloudFormationStackARN`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: tagFilters

         `CfnScalingPlan.ApplicationSourceProperty.TagFilters`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.TagFilterProperty`\ )[] *(optional)* *(readonly)*


   .. py:class:: CustomizedLoadMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.CustomizedLoadMetricSpecificationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.CustomizedLoadMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.CustomizedLoadMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: metricName

         `CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.MetricName`



         :type: string *(readonly)*


      .. py:attribute:: namespace

         `CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.Namespace`



         :type: string *(readonly)*


      .. py:attribute:: statistic

         `CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.Statistic`



         :type: string *(readonly)*


      .. py:attribute:: dimensions

         `CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.Dimensions`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.MetricDimensionProperty`\ )[] *(optional)* *(readonly)*


      .. py:attribute:: unit

         `CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.Unit`



         :type: string *(optional)* *(readonly)*


   .. py:class:: CustomizedScalingMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.CustomizedScalingMetricSpecificationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.CustomizedScalingMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.CustomizedScalingMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: metricName

         `CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.MetricName`



         :type: string *(readonly)*


      .. py:attribute:: namespace

         `CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.Namespace`



         :type: string *(readonly)*


      .. py:attribute:: statistic

         `CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.Statistic`



         :type: string *(readonly)*


      .. py:attribute:: dimensions

         `CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.Dimensions`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.MetricDimensionProperty`\ )[] *(optional)* *(readonly)*


      .. py:attribute:: unit

         `CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.Unit`



         :type: string *(optional)* *(readonly)*


   .. py:class:: MetricDimensionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.MetricDimensionProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.MetricDimensionProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.MetricDimensionProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: name

         `CfnScalingPlan.MetricDimensionProperty.Name`



         :type: string *(readonly)*


      .. py:attribute:: value

         `CfnScalingPlan.MetricDimensionProperty.Value`



         :type: string *(readonly)*


   .. py:class:: PredefinedLoadMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.PredefinedLoadMetricSpecificationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.PredefinedLoadMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.PredefinedLoadMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: predefinedLoadMetricType

         `CfnScalingPlan.PredefinedLoadMetricSpecificationProperty.PredefinedLoadMetricType`



         :type: string *(readonly)*


      .. py:attribute:: resourceLabel

         `CfnScalingPlan.PredefinedLoadMetricSpecificationProperty.ResourceLabel`



         :type: string *(optional)* *(readonly)*


   .. py:class:: PredefinedScalingMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.PredefinedScalingMetricSpecificationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.PredefinedScalingMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.PredefinedScalingMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: predefinedScalingMetricType

         `CfnScalingPlan.PredefinedScalingMetricSpecificationProperty.PredefinedScalingMetricType`



         :type: string *(readonly)*


      .. py:attribute:: resourceLabel

         `CfnScalingPlan.PredefinedScalingMetricSpecificationProperty.ResourceLabel`



         :type: string *(optional)* *(readonly)*


   .. py:class:: ScalingInstructionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.ScalingInstructionProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.ScalingInstructionProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.ScalingInstructionProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: maxCapacity

         `CfnScalingPlan.ScalingInstructionProperty.MaxCapacity`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


      .. py:attribute:: minCapacity

         `CfnScalingPlan.ScalingInstructionProperty.MinCapacity`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


      .. py:attribute:: resourceId

         `CfnScalingPlan.ScalingInstructionProperty.ResourceId`



         :type: string *(readonly)*


      .. py:attribute:: scalableDimension

         `CfnScalingPlan.ScalingInstructionProperty.ScalableDimension`



         :type: string *(readonly)*


      .. py:attribute:: serviceNamespace

         `CfnScalingPlan.ScalingInstructionProperty.ServiceNamespace`



         :type: string *(readonly)*


      .. py:attribute:: targetTrackingConfigurations

         `CfnScalingPlan.ScalingInstructionProperty.TargetTrackingConfigurations`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.TargetTrackingConfigurationProperty`\ )[] *(readonly)*


      .. py:attribute:: customizedLoadMetricSpecification

         `CfnScalingPlan.ScalingInstructionProperty.CustomizedLoadMetricSpecification`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.CustomizedLoadMetricSpecificationProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: disableDynamicScaling

         `CfnScalingPlan.ScalingInstructionProperty.DisableDynamicScaling`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: predefinedLoadMetricSpecification

         `CfnScalingPlan.ScalingInstructionProperty.PredefinedLoadMetricSpecification`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.PredefinedLoadMetricSpecificationProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: predictiveScalingMaxCapacityBehavior

         `CfnScalingPlan.ScalingInstructionProperty.PredictiveScalingMaxCapacityBehavior`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: predictiveScalingMaxCapacityBuffer

         `CfnScalingPlan.ScalingInstructionProperty.PredictiveScalingMaxCapacityBuffer`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: predictiveScalingMode

         `CfnScalingPlan.ScalingInstructionProperty.PredictiveScalingMode`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: scalingPolicyUpdateBehavior

         `CfnScalingPlan.ScalingInstructionProperty.ScalingPolicyUpdateBehavior`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: scheduledActionBufferTime

         `CfnScalingPlan.ScalingInstructionProperty.ScheduledActionBufferTime`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:class:: TagFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.TagFilterProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.TagFilterProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.TagFilterProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: key

         `CfnScalingPlan.TagFilterProperty.Key`



         :type: string *(readonly)*


      .. py:attribute:: values

         `CfnScalingPlan.TagFilterProperty.Values`



         :type: string[] *(optional)* *(readonly)*


   .. py:class:: TargetTrackingConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.TargetTrackingConfigurationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.TargetTrackingConfigurationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.TargetTrackingConfigurationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: targetValue

         `CfnScalingPlan.TargetTrackingConfigurationProperty.TargetValue`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


      .. py:attribute:: customizedScalingMetricSpecification

         `CfnScalingPlan.TargetTrackingConfigurationProperty.CustomizedScalingMetricSpecification`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.CustomizedScalingMetricSpecificationProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: disableScaleIn

         `CfnScalingPlan.TargetTrackingConfigurationProperty.DisableScaleIn`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: estimatedInstanceWarmup

         `CfnScalingPlan.TargetTrackingConfigurationProperty.EstimatedInstanceWarmup`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: predefinedScalingMetricSpecification

         `CfnScalingPlan.TargetTrackingConfigurationProperty.PredefinedScalingMetricSpecification`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.PredefinedScalingMetricSpecificationProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: scaleInCooldown

         `CfnScalingPlan.TargetTrackingConfigurationProperty.ScaleInCooldown`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: scaleOutCooldown

         `CfnScalingPlan.TargetTrackingConfigurationProperty.ScaleOutCooldown`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnScalingPlanProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnScalingPlanProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlanProps;

      .. code-tab:: javascript

         // CfnScalingPlanProps is an interface

      .. code-tab:: typescript

         import { CfnScalingPlanProps } from '@aws-cdk/aws-autoscalingplans';



   Properties for defining a `AWS::AutoScalingPlans::ScalingPlan`





   .. py:attribute:: applicationSource

      `AWS::AutoScalingPlans::ScalingPlan.ApplicationSource`



      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.ApplicationSourceProperty`\  or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:attribute:: scalingInstructions

      `AWS::AutoScalingPlans::ScalingPlan.ScalingInstructions`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.ScalingInstructionProperty`\ )[] *(readonly)*


